[DATAVIC-911] fix an issue where resource form not showing error messages

--- a/ckanext/datavic_odp_theme/grunt/sass/_form.scss
+++ b/ckanext/datavic_odp_theme/grunt/sass/_form.scss
@@ -144,3 +144,7 @@ select.form-control {
 input[data-module="datavic-slug-visible"] {
     flex: 1;
 }
+
+#field-name + .error-block {
+    width: 100%;
+}
